--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://4Ars5zDWN2C6y2t.root:Cz5IzcUP4kbZ0W6m@gateway01.ap-southeast-1.prod.aws.tidbcloud.com:4000/test/userdb?sslaccept=strict"
+DATABASE_URL="mysql://4Ars5zDWN2C6y2t.root:Cz5IzcUP4kbZ0W6m@gateway01.ap-southeast-1.prod.aws.tidbcloud.com:4000/userdb?sslaccept=strict"
 
 
 Cz5IzcUP4kbZ0W6m
